--- a/contact_us.html
+++ b/contact_us.html
@@ -195,7 +195,7 @@
             <img src="./images/home/signature (2).png" alt="BlastBazzar Logo">
         </div>
         <ul class="nav-links">
-            <li><a href="homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shopping_cart.html">Cart</a></li>
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="contact_us.html">Contact</a></li>
