--- a/checkout.html
+++ b/checkout.html
@@ -183,7 +183,7 @@
             </div>
             <button class="menu-btn" onclick="toggleMenu()">☰</button>
             <ul class="nav-links">
-                <li><a href="homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="shopping_cart.html">Cart</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="contact_us.html">Contact</a></li>
