--- a/contact_us.html
+++ b/contact_us.html
@@ -84,13 +84,14 @@
         .contact-form {
             max-width: 450px;
             margin: auto;
-            background: rgba(50, 50, 50, 0.9);
+            background: transparent;
             padding: 2em;
             border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(12px);
             border: 1px solid #ffcc00;
             transition: transform 0.3s ease;
+            z-index: 1000;
         }
 
         .contact-form:hover {
