--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
     <style>
-    /* General Styles */
+/* General Styles */
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background:url("images/home/background2.gif");
+    background: url("images/home/background2.gif");
     color: #fff;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    max-width: 100vw; /* Prevents horizontal scrolling */
+    overflow-x: hidden; /* Hides horizontal scroll */
+    box-sizing: border-box;
 }
 
 a {
@@ -38,9 +41,10 @@ a:hover {
     width: 100%;
     z-index: 1000;
     backdrop-filter: blur(8px);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 2px solid #ffcc00;
-
+    box-sizing: border-box;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .logo img {
@@ -52,6 +56,7 @@ a:hover {
     list-style: none;
     display: flex;
     gap: 25px;
+    flex-wrap: wrap; /* Prevents overflow */
 }
 
 .nav-links a {
@@ -89,13 +94,8 @@ a:hover {
 main {
     padding: 3em 10%;
     text-align: center;
-}
-
-main h2 {
-    font-size: 2.5em;
-    margin-bottom: 1em;
-    color: #ff9900;
-    text-shadow: 0 0 10px #ff9900;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 /* Cart Table */
@@ -106,13 +106,11 @@ main h2 {
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
     backdrop-filter: blur(8px);
 }
 
 .cart-items {
     background: transparent;
-    z-index: 1000;
     backdrop-filter: blur(8px);
 }
 
@@ -122,8 +120,9 @@ table {
     color: #ff9900;
     text-shadow: 0 0 10px #ff9900;
     background: transparent;
-    z-index: 1000;
     backdrop-filter: blur(8px);
+    overflow-x: auto; /* Ensures table fits within the screen */
+    max-width: 100%;
 }
 
 th, td {
@@ -131,7 +130,6 @@ th, td {
     text-align: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     background: transparent;
-    z-index: 1000;
     backdrop-filter: blur(8px);
 }
 
@@ -140,15 +138,12 @@ th {
     font-size: 18px;
     color: #ff9900;
     text-shadow: 0 0 10px #ff9900;
-    z-index: 1000;
     backdrop-filter: blur(8px);
 }
 
 td img {
     width: 60px;
     border-radius: 5px;
-    z-index: 1000;
-    backdrop-filter: blur(8px);
 }
 
 /* Buttons */
@@ -186,33 +181,14 @@ footer {
     color: white;
     text-align: center;
     padding: 15px;
-    position: fixed;
-    bottom: 0; /* Stick to the bottom of the page */
+    bottom: 0;
     left: 0;
-    width: 100%; /* Ensure the footer spans the full width */
-    z-index: 1000;
+    width: 100%;
     backdrop-filter: blur(8px);
     border-top: 2px solid #ffcc00;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
-
-.add-to-cart-message {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #28a745;
-    color: white;
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 9999;
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-}
-
 
 /* Responsive Styles */
 @media only screen and (max-width: 768px) {
@@ -262,6 +238,12 @@ footer {
         padding: 15px;
     }
 
+    table {
+        display: block;
+        overflow-x: auto;
+        max-width: 100%;
+    }
+
     table th, table td {
         font-size: 16px;
         padding: 10px;
@@ -299,6 +281,7 @@ footer {
         padding: 10px;
     }
 }
+
 
     </style>
 </head>
