--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.7);
     padding: 15px 30px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    backdrop-filter: blur(8px);
     border-bottom: 2px solid #ffcc00;
+    max-width: 100vw;
 }
-
 .menu-icon i{
         color: #fff;
         font-size: 30px;
@@ -58,7 +60,9 @@ body {
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 30px;
+    gap: 25px;
+    flex-wrap: wrap;
+    margin-left: auto; /* Moves the links to the right */
 }
 
 .nav-links a {
@@ -74,15 +78,6 @@ body {
     text-shadow: 0 0 10px #ff9900;
 }
 
-.navbar-icons a {
-    color: white;
-    font-size: 23px;
-    transition: color 0.3s;
-}
-
-.navbar-icons a:hover {
-    color: #ff5733;
-}
 
 /* Product Listings */
 .product-listings {
@@ -265,10 +260,6 @@ footer {
         </ul>
         <div class="menu-icon">
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
-        </div>
-        <div class="navbar-icons">
-            <img src="./images/home/shopping-cart-line.png" alt="cart">
-            <span class="cart-items-count"></span>
         </div>
     </div>
 
