--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -98,6 +98,16 @@ main {
     overflow-x: hidden;
 }
 
+/* Main Content */
+main h2 {
+            font-size: 3.5em; /* Increased size */
+            color: #ff9900;
+            text-shadow: 0 0 10px #ff9900;
+            margin-bottom: 1em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        
 /* Cart Table */
 .cart-container {
     max-width: 900px;
