--- a/checkout.html
+++ b/checkout.html
@@ -3,176 +3,299 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart</title>
+    <title>Checkout</title>
     <style>
-        /* General Styles */
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #121212;
-            color: #fff;
-            position: relative;
-            background-size: cover;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
+/* General Styles */
+body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: url("images/home/background2.gif");
+    color: #fff;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    max-width: 100vw; /* Prevents horizontal scrolling */
+    overflow-x: hidden; /* Hides horizontal scroll */
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: #f1c40f;
+    transition: color 0.3s;
+}
+
+a:hover {
+    color: #e67e22;
+}
+
+/* Navbar */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 15px 30px;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    backdrop-filter: blur(8px);
+    border-bottom: 2px solid #ffcc00;
+    box-sizing: border-box;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+.logo img {
+    width: 220px;
+    filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.3));
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap; /* Prevents overflow */
+}
+
+.nav-links a {
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    transition: color 0.3s;
+}
+
+.nav-links a:hover {
+    color: #ff9900;
+    text-shadow: 0 0 10px #ff9900;
+}
+
+/* Hamburger Menu */
+.menu-btn {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-size: 30px;
+    transition: color 0.3s;
+}
+
+.menu-btn:focus {
+    outline: none;
+}
+
+.menu-btn.open {
+    color: #f1c40f;
+}
+
+/* Main Content */
+main {
+    padding: 3em 10%;
+    text-align: center;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+/* Main Content */
+main h2 {
+            font-size: 3.5em; /* Increased size */
+            color: #ff9900;
+            text-shadow: 0 0 10px #ff9900;
+            margin-bottom: 1em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
-        a {
-            text-decoration: none;
-            color: #f1c40f;
-            transition: color 0.3s;
-        }
+/* Checkout Container */
+.checkout-container {
+    max-width: 900px;
+    margin: auto;
+    background: transparent;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(8px);
 
-        a:hover {
-            color: #e67e22;
-        }
+}
 
-        /* Navbar */
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 15px 30px;
-            position: sticky;
-            top: 0;
-            width: 100%;
+.checkout-container {
+    font-size: 20px;
+    color: #ff9900;
+}
+
+.checkout-details {
+    background: transparent;
+    backdrop-filter: blur(8px);
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    color: #ff9900;
+    text-shadow: 0 0 10px #ff9900;
+    background: transparent;
+    backdrop-filter: blur(8px);
+    overflow-x: auto; /* Ensures table fits within the screen */
+    max-width: 100%;
+}
+
+th, td {
+    padding: 15px;
+    text-align: center;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    background: transparent;
+    backdrop-filter: blur(8px);
+}
+
+th {
+    background-color: transparent;
+    font-size: 18px;
+    color: #ff9900;
+    text-shadow: 0 0 10px #ff9900;
+    backdrop-filter: blur(8px);
+}
+
+td img {
+    width: 60px;
+    border-radius: 5px;
+}
+
+/* Buttons */
+.cart-btn {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.remove-btn {
+    background: #e74c3c;
+}
+
+.remove-btn:hover {
+    background: #c0392b;
+}
+
+.checkout-btn {
+    background: #27ae60;
+    display: block;
+    margin: 20px auto 0;
+}
+
+.checkout-btn:hover {
+    background: #219150;
+}
+
+ /* Footer */
+ footer {
+            background: transparent;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            bottom: 0; /* Stick to the bottom of the page */
+            left: 0;
+            width: 100%; /* Ensure the footer spans the full width */
             z-index: 1000;
             backdrop-filter: blur(8px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            border-top: 2px solid #ffcc00;
         }
 
-        .logo img {
-            width: 180px;
-        }
+/* Responsive Styles */
+@media only screen and (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        padding: 15px 20px;
+    }
 
-        .nav-links {
-            list-style: none;
-            display: flex;
-            gap: 25px;
-        }
+    .logo {
+        position: absolute;
+        left: 30px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 
-        .nav-links a {
-            color: white;
-            font-size: 20px;
-            font-weight: 500;
-            transition: color 0.3s;
-        }
+    .logo img {
+        width: 180px;
+        margin-bottom: 10px;
+    }
 
-        .nav-links a:hover {
-            color: #f1c40f;
-        }
+    .nav-links {
+        flex-direction: column;
+        gap: 15px;
+        align-items: center;
+        display: none;
+        width: 100%;
+        text-align: center;
+    }
 
-        .menu-btn {
-            display: none;
-            background: none;
-            border: none;
-            cursor: pointer;
-            color: white;
-            font-size: 30px;
-        }
+    .nav-links a {
+        font-size: 18px;
+    }
 
-        /* Cart Table */
-        .cart-container {
-            max-width: 900px;
-            margin: auto;
-            background: #1c1c1c;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
+    .nav-links.open {
+        display: flex;
+    }
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
+    .menu-btn {
+        display: block;
+    }
 
-        th, td {
-            padding: 15px;
-            text-align: center;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-        }
+    main {
+        padding: 2em 5%;
+    }
 
-        th {
-            background-color: #2c2c2c;
-            font-size: 18px;
-            color: #f1c40f;
-        }
+    .checkout-container {
+        padding: 15px;
+    }
 
-        td img {
-            width: 60px;
-            border-radius: 5px;
-        }
+    table {
+        display: block;
+        overflow-x: auto;
+        max-width: 100%;
+    }
 
-        .checkout-btn {
-            background: #27ae60;
-            display: block;
-            margin: 20px auto 0;
-            padding: 10px 20px;
-            font-size: 16px;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
+    table th, table td {
+        font-size: 16px;
+        padding: 10px;
+    }
 
-        .checkout-btn:hover {
-            background: #219150;
-        }
+    .checkout-btn {
+        width: 100%;
+        padding: 12px;
+    }
+}
 
-        /* Footer */
-        footer {
-            background: #2c2c2c;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 30px;
-        }
+@media only screen and (max-width: 480px) {
+    .logo img {
+        width: 150px;
+    }
 
-        /* Responsive Styles */
-        @media only screen and (max-width: 768px) {
-            .navbar {
-                flex-direction: row;
-                padding: 15px 20px;
-            }
+    .navbar {
+        padding: 10px 15px;
+    }
 
-            .logo img {
-                width: 180px;
-            }
+    main h2 {
+        font-size: 2em;
+    }
 
-            .nav-links {
-                flex-direction: column;
-                gap: 15px;
-                align-items: center;
-                display: none; /* Hide menu items initially */
-                width: 100%;
-                text-align: center;
-            }
+    table th, table td {
+        font-size: 14px;
+        padding: 8px;
+    }
 
-            .menu-btn {
-                display: block;
-            }
+    .cart-btn {
+        font-size: 14px;
+    }
 
-            main {
-                padding: 2em 5%;
-            }
-
-            .cart-container {
-                padding: 15px;
-            }
-
-            table th, table td {
-                font-size: 16px;
-                padding: 10px;
-            }
-
-            .checkout-btn {
-                width: 100%;
-                padding: 12px;
-            }
-        }
+    .checkout-btn {
+        padding: 10px;
+    }
+}
     </style>
 </head>
 <body>
@@ -192,20 +315,29 @@
     </header>
 
     <main>
-        <h2>Your Cart</h2>
-        <div class="cart-container">
+        <h2>Checkout</h2>
+        <div class="checkout-container">
+            <h3>Your Cart Summary</h3>
             <table>
                 <thead>
                     <tr>
-                        <th>Products</th>
+                        <th>Product</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
                     </tr>
                 </thead>
-                <tbody id="cart-items">
-                    <!-- Items will be added dynamically -->
+                <tbody id="checkout-items">
+                    <!-- Cart Items will be dynamically added here -->
                 </tbody>
             </table>
-            <h3 id="total-price">Total: ₹0</h3>
-            <button class="checkout-btn" onclick="proceedToCheckout()">Proceed to Checkout</button>
+
+            <div id="additional-charges" style="margin-top: 20px;">
+                <div>GST (18%): ₹<span id="gst-charge">0</span></div>
+                <div>Delivery Charge: ₹<span id="delivery-charge">50</span></div>
+            </div>
+
+            <h3 id="checkout-total">Total: ₹0</h3>
+            <button class="cart-btn checkout-btn" onclick="completeCheckout()">Complete Purchase</button>
         </div>
     </main>
 
@@ -214,19 +346,71 @@
     </footer>
 
     <script>
-        function getCartItems() {
-            return [
-                { name: "Product A", quantity: 2, price: 150 },
-                { name: "Product B", quantity: 1, price: 200 }
-            ];
-        }
+// Existing functions to handle cart
+function getCart() {
+    return JSON.parse(localStorage.getItem("cart")) || [];
+}
 
-        function proceedToCheckout() {
-            const totalPrice = document.getElementById('total-price').textContent.replace('Total: ₹', '');
-            const cartItems = getCartItems();
-            const checkoutUrl = `checkout.html?totalPrice=${totalPrice}&cartItems=${encodeURIComponent(JSON.stringify(cartItems))}`;
-            window.location.href = checkoutUrl;
-        }
+function saveCart(cart) {
+    localStorage.setItem("cart", JSON.stringify(cart));
+}
+
+function showToast(message) {
+    let toast = document.getElementById("toast");
+    toast.innerHTML = message;
+    toast.style.display = "block";
+    toast.style.animation = "none"; // Reset animation
+    setTimeout(() => {
+        toast.style.animation = "fadeInOut 3s ease-in-out";
+    }, 10);
+    setTimeout(() => {
+        toast.style.display = "none";
+    }, 3000); // Hide after 3 seconds
+}
+
+// Function to update checkout page with cart details
+function updateCheckoutPage() {
+    let cart = getCart();
+    let checkoutItemsContainer = document.getElementById('checkout-items');
+    let total = 0;
+    let gst = 0;
+    let deliveryCharge = 50; // Flat delivery charge
+    let gstRate = 0.18; // 18% GST
+
+    checkoutItemsContainer.innerHTML = ""; // Clear previous items
+
+    cart.forEach(item => {
+        let itemTotal = item.price * item.quantity;
+        total += itemTotal;
+        checkoutItemsContainer.innerHTML += `
+            <tr>
+                <td>${item.name}</td>
+                <td>${item.quantity}</td>
+                <td>₹${itemTotal}</td>
+            </tr>
+        `;
+    });
+
+    // Calculate GST
+    gst = total * gstRate;
+
+    // Update charges on page
+    document.getElementById('gst-charge').textContent = gst.toFixed(2);
+    document.getElementById('delivery-charge').textContent = deliveryCharge;
+    
+    // Update total including GST and Delivery
+    let finalTotal = total + gst + deliveryCharge;
+    document.getElementById('checkout-total').textContent = `Total: ₹${finalTotal.toFixed(2)}`;
+}
+
+// Function to complete the checkout process
+function completeCheckout() {
+    alert("Your purchase has been completed successfully!");
+    window.location.href = "index.html"; // Redirect to Home Page after purchase
+}
+
+// Initialize the checkout page
+updateCheckoutPage();
     </script>
 </body>
 </html>
