--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -107,7 +107,7 @@ main h2 {
             text-transform: uppercase;
             letter-spacing: 2px;
         }
-        
+
 /* Cart Table */
 .cart-container {
     max-width: 900px;
@@ -185,19 +185,17 @@ td img {
     background: #219150;
 }
 
-/* Footer */
 footer {
     background: transparent;
     color: white;
     text-align: center;
     padding: 15px;
-    bottom: 0;
+    bottom: 0; /* Stick to the bottom of the page */
     left: 0;
-    width: 100%;
+    width: 100%; /* Ensure the footer spans the full width */
+    z-index: 1000;
     backdrop-filter: blur(8px);
     border-top: 2px solid #ffcc00;
-    max-width: 100vw;
-    overflow-x: hidden;
 }
 
 /* Responsive Styles */
