--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlastBazzar - Fireworks</title>
     <style>
-    /* Basic Reset */
+/* Basic Reset */
 * {
     margin: 0;
     padding: 0;
@@ -48,12 +48,38 @@ body {
     max-width: 100vw;
 }
 
+.logo img {
+    width: 230px;
+    filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.3));
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+    margin-left: auto;
+}
+
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: 600;
+    transition: color 0.3s;
+}
+
+.nav-links a:hover {
+    color: #ff9900;
+    text-shadow: 0 0 10px #ff9900;
+}
+
 /* Toast Notification (Top-Center Position) */
 #toast {
     position: fixed;
-    top: 80px; /* Position near the top */
+    top: 80px;
     left: 50%;
-    transform: translateX(-50%); /* Center horizontally */
+    transform: translateX(-50%);
     background: linear-gradient(90deg, #ff3131, #ff5733);
     color: white;
     padding: 12px 20px;
@@ -64,7 +90,7 @@ body {
     display: none;
     animation: fadeInOut 3s ease-in-out;
     z-index: 1000;
-    min-width: 250px; /* Set a minimum width */
+    min-width: 250px;
     text-align: center;
 }
 
@@ -87,40 +113,6 @@ body {
         transform: translateX(-50%) translateY(-50px);
     }
 }
-
-
-
-.menu-icon i{
-        color: #fff;
-        font-size: 30px;
-    }
-
-.logo img {
-    width: 230px;
-    filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.3));
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 25px;
-    flex-wrap: wrap;
-    margin-left: auto; /* Moves the links to the right */
-}
-
-.nav-links a {
-    color: white;
-    text-decoration: none;
-    font-size: 22px;
-    font-weight: 600;
-    transition: color 0.3s;
-}
-
-.nav-links a:hover {
-    color: #ff9900;
-    text-shadow: 0 0 10px #ff9900;
-}
-
 
 /* Product Listings */
 .product-listings {
@@ -217,9 +209,9 @@ footer {
     color: white;
     text-align: center;
     padding: 15px;
-    bottom: 0; /* Stick to the bottom of the page */
+    bottom: 0;
     left: 0;
-    width: 100%; /* Ensure the footer spans the full width */
+    width: 100%;
     z-index: 1000;
     backdrop-filter: blur(8px);
     border-top: 2px solid #ffcc00;
@@ -245,19 +237,15 @@ footer {
     .navbar {
         flex-direction: column;
         padding: 10px;
+        justify-content: center;
+        align-items: center; /* Add this line */
     }
     .nav-links {
+        
         flex-direction: column;
+        gap: 15px;
+        width: 100%;
         text-align: center;
-        gap: 10px;
-        display: none;
-    }
-    .nav-links.show {
-        display: flex;
-    }
-    .menu-icon {
-        display: block;
-        cursor: pointer;
     }
     .product-grid {
         grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -270,33 +258,20 @@ footer {
 @media only screen and (max-width: 480px) {
     .navbar {
         padding: 10px;
+        justify-content: center;
+        align-items: center; /* Add this line */
+    }
+    .nav-links {
+        flex-direction: column;
+        text-align: center;
+        gap: 10px;
+        align-items: center; /* Add this line */
     }
     .logo img {
         width: 150px;
     }
-    .menu-icon {
-        display: block;
-    }
-    .nav-links {
-        position: absolute;
-        top: 70px;
-        left: 0;
-        right: 0;
-        flex-direction: column;
-        text-align: center;
-        background: rgba(0, 0, 0, 0.9);
-        gap: 0;
-        overflow: hidden;
-        padding: 10px 0;
-        display: none;
-    }
-    .nav-links.show {
-        display: flex;
-    }
     .nav-links a {
         font-size: 18px;
-        padding: 12px 0;
-        display: block;
     }
     .product-grid {
         grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -309,49 +284,6 @@ footer {
     }
 }
 
-/* Responsive Navbar */
-.menu-icon {
-    display: none;
-    font-size: 30px;
-    color: white;
-    cursor: pointer;
-}
-
-/* Hide Navbar Links by Default */
-.nav-links {
-    display: flex;
-    gap: 25px;
-    list-style: none;
-}
-
-/* Mobile Menu */
-@media only screen and (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 70px;
-        left: 0;
-        right: 0;
-        background: rgba(0, 0, 0, 0.9);
-        padding: 10px 0;
-        text-align: center;
-    }
-    .nav-links.show {
-        display: flex;
-    }
-    .nav-links li {
-        padding: 10px 0;
-    }
-    .nav-links a {
-        font-size: 18px;
-        color: white;
-        text-decoration: none;
-    }
-}
 
 
 </style>
@@ -373,9 +305,6 @@ footer {
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="contact_us.html">Contact</a></li>
         </ul>
-        <div class="menu-icon" onclick="toggleMenu()">
-            <i class="fas fa-bars"></i> <!-- Font Awesome Icon -->
-        </div>
     </div>
     <div id="toast" class="toast"></div>
     <!-- Product Listings -->
