--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@ footer {
             <li><a href="shopping_cart.html">Cart</a></li>
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="contact_us.html">Contact</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </div>
     <div id="toast" class="toast"></div>
