--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 }
 
 body {
-    background: url("images/home/background2.gif");
+    background: url("./images/home/background2.gif");
     font-family: "Poppins", sans-serif;
     color: white;
     overflow-x: hidden;
@@ -282,6 +282,17 @@ footer {
     .product-listings h2 {
         font-size: 22px;
     }
+}
+
+
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-track{
+    background: #0b0b0b;
+}
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(#e09b1b, #7a2e11);
 }
 
 
