--- a/checkout.html
+++ b/checkout.html
@@ -273,6 +273,17 @@ footer {
     }
 }
 
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-track{
+    background: #0b0b0b;
+}
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(#e09b1b, #7a2e11);
+}
+
+
     </style>
 </head>
 <body>
