--- a/login.html
+++ b/login.html
@@ -231,8 +231,8 @@ footer {
     <main>
         <div class="login-container">
             <h2>Login</h2>
-            <form class="login-form">
-                <input type="text" name="username" placeholder="Username" required>
+            <form class="login-form" id="loginform">
+                <input type="text" name="email" placeholder="email" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit" href="index.html">Login</button>
             </form>
