--- a/details.html
+++ b/details.html
@@ -5,51 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivery Information</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+         /* Basic Reset */
+         * {
             margin: 0;
             padding: 0;
-            background: url("images/home/background2.gif") no-repeat center center fixed;
-            background-size: cover;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
             box-sizing: border-box;
         }
 
+        html, body {
+            height: 100%;
+            background: url("images/home/background2.gif");
+            font-family: 'Poppins', sans-serif;
+            color: #f5f5f5;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Navbar */
         .navbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background: rgba(0, 0, 0, 0.8);
+            background: transparent;
             padding: 15px 30px;
-            position: sticky;
-            top: 0;
-            width: 100%;
+            color: white;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+            border-bottom: 2px solid #ffcc00;
             z-index: 1000;
+            backdrop-filter: blur(8px);
         }
 
         .logo img {
             width: 200px;
+            height: auto;
+            filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.3));
         }
 
         .nav-links {
             list-style: none;
             display: flex;
-            gap: 20px;
-            margin: 0;
-            padding: 0;
+            gap: 25px;
         }
 
         .nav-links a {
-            color: #fff;
+            color: white;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 20px;
+            font-weight: 600;
+            transition: color 0.3s ease;
         }
 
         .nav-links a:hover {
-            color: #f39c12;
+            color: #ff9900;
+            text-shadow: 0 0 10px #ff9900;
         }
 
         main {
@@ -116,11 +124,18 @@
             background-color: #1c5985;
         }
 
+        /* Footer */
         footer {
-            background: rgba(0, 0, 0, 0.8);
-            color: #fff;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
             text-align: center;
             padding: 15px;
+            width: 100%;
+            z-index: 1000;
+            backdrop-filter: blur(8px);
+            border-top: 2px solid #ffcc00;
+            position: sticky;
+            bottom: 0;
         }
 
         @media (max-width: 768px) {
