--- a/about_us.html
+++ b/about_us.html
@@ -148,17 +148,32 @@ main h2 {
 
 /* Footer */
 footer {
-    background: transparent;
-    color: white;
-    text-align: center;
-    padding: 15px;
-    bottom: 0; /* Stick to the bottom of the page */
-    left: 0;
-    width: 100%; /* Ensure the footer spans the full width */
-    z-index: 1000;
-    backdrop-filter: blur(8px);
-    border-top: 2px solid #ffcc00;
-}
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        text-align: center;
+        padding: 15px;
+        width: 100%;
+        z-index: 1000;
+        backdrop-filter: blur(8px);
+        border-top: 2px solid #ffcc00;
+        position: sticky;
+        bottom: 0;
+    }
+
+    .footer-links {
+        margin-top: 10px;
+    }
+
+    .footer-links a {
+        color: #ffcc00;
+        text-decoration: none;
+        margin: 0 10px;
+        font-size: 14px;
+    }
+
+    .footer-links a:hover {
+        text-decoration: underline;
+    }
 
 /* Responsive Styles */
 @media only screen and (max-width: 1024px) {
@@ -313,7 +328,11 @@ footer {
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Firecracker Store. All Rights Reserved.</p>
+        &copy; 2025 BlastBazzar. All Rights Reserved.
+        <div class="footer-links">
+            <a href="privacy-policy.html">Privacy Policy</a> |
+            <a href="license.html">License</a>
+        </div>
     </footer>
 </body>
 </html>
