--- a/checkout.html
+++ b/checkout.html
@@ -174,19 +174,34 @@ td img {
     background: #219150;
 }
 
+/* Footer */
 footer {
-    background: transparent;
-    color: white;
-    text-align: center;
-    padding: 15px;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    backdrop-filter: blur(8px);
-    border-top: 2px solid #ffcc00;
-    position: sticky; /* Ensure footer sticks to the bottom */
-}
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        text-align: center;
+        padding: 15px;
+        width: 100%;
+        z-index: 1000;
+        backdrop-filter: blur(8px);
+        border-top: 2px solid #ffcc00;
+        position: sticky;
+        bottom: 0;
+    }
+
+    .footer-links {
+        margin-top: 10px;
+    }
+
+    .footer-links a {
+        color: #ffcc00;
+        text-decoration: none;
+        margin: 0 10px;
+        font-size: 14px;
+    }
+
+    .footer-links a:hover {
+        text-decoration: underline;
+    }
 
 /* Responsive Styles */
 @media only screen and (max-width: 768px) {
@@ -319,12 +334,16 @@ footer {
             </table>
 
             <h3 id="checkout-total">Total: ₹0</h3>
-            <button class="cart-btn checkout-btn" onclick="completeCheckout()">Complete Purchase</button>
+            <button class="cart-btn checkout-btn" onclick="completeCheckout()" href="details.html">Complete Purchase</button>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 BlastBazzar! All Rights Reserved.</p>
+        &copy; 2025 BlastBazzar. All Rights Reserved.
+        <div class="footer-links">
+            <a href="privacy-policy.html">Privacy Policy</a> |
+            <a href="license.html">License</a>
+        </div>
     </footer>
 
     <script>
