--- a/details.html
+++ b/details.html
@@ -125,18 +125,33 @@
         }
 
         /* Footer */
-        footer {
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            text-align: center;
-            padding: 15px;
-            width: 100%;
-            z-index: 1000;
-            backdrop-filter: blur(8px);
-            border-top: 2px solid #ffcc00;
-            position: sticky;
-            bottom: 0;
-        }
+    footer {
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        text-align: center;
+        padding: 15px;
+        width: 100%;
+        z-index: 1000;
+        backdrop-filter: blur(8px);
+        border-top: 2px solid #ffcc00;
+        position: sticky;
+        bottom: 0;
+    }
+
+    .footer-links {
+        margin-top: 10px;
+    }
+
+    .footer-links a {
+        color: #ffcc00;
+        text-decoration: none;
+        margin: 0 10px;
+        font-size: 14px;
+    }
+
+    .footer-links a:hover {
+        text-decoration: underline;
+    }
 
         @media (max-width: 768px) {
             .navbar {
@@ -228,6 +243,10 @@
 
     <footer>
         &copy; 2025 BlastBazzar. All Rights Reserved.
+        <div class="footer-links">
+            <a href="privacy-policy.html">Privacy Policy</a> |
+            <a href="license.html">License</a>
+        </div>
     </footer>
 
     <script>
